2018-06-19  Leo Balter  <leonardo.balter@gmail.com>

        [test262-runner] Print results report to HTML
        https://bugs.webkit.org/show_bug.cgi?id=186790

        Reviewed by Michael Saboff.

        After runing the tests, 2 html files are created with a list to failing tests and summaries.
        * Scripts/test262/Runner.pm:
        (main):
        (summarizeResults):
        (printHTML):

2018-06-19  Keith Rollin  <krollin@apple.com>

        Crash running check-webkit-style on webrtc/.../exceptions.py
        https://bugs.webkit.org/show_bug.cgi?id=186816
        <rdar://problem/41262553>

        Reviewed by Michael Catanzaro.

        It's not apparent to me why the crash is occurring. Trying to write a
        unittest that checks this file in isolation does not reproduce the
        crash. But the crash goes away when updating to pylint-0.25.2.

        * Scripts/webkitpy/thirdparty/__init__.py:
        (AutoinstallImportHook._install_pylint):

2018-06-19  Keith Rollin  <krollin@apple.com>

        cpp style checker needs to know more about NOLINT
        https://bugs.webkit.org/show_bug.cgi?id=186796

        Reviewed by Aakash Jain.

        Running check-webkit-style on
        ThirdParty/gtest/src/gtest-internal-inl.h crashes with a KeyError as
        it tries to look up information about a particular #include in a
        dictionary it maintains. The problem has to do with the following
        lines in gtest-internal-inl.h:

        #include <gtest/gtest.h>  // NOLINT
        #include <gtest/gtest-spi.h>

        The NOLINT annotation will prevent the cpp-checker from processing or
        even seeing that line. In skipping that line, information regarding
        that line is NOT added to some internal tables. However, when the code
        that checks that #includes are correctly alphabetized gets to the
        "gtest-spi.h" line, it will not respect the NOLINT annotation and will